2002-03-26  Hideyuki SHIRAI  <shirai@meadowy.org>

	* w3m-cookie.el (w3m-cookie-save): Use `w3m-time-newer-p' instead of
	`w3m-time-lapse-seconds'.

2002-03-26  Yuuichi Teranishi  <teranisi@gohome.org>

	* w3m-cookie.el (w3m-cookie): New command.
	(w3m-about-cookie): Do nothing if w3m-use-cookies is nil.

	* w3m.el (toplevel): Added autoload setting for w3m-about-cookie;
	Added autoload setting for w3m-cookie.

	* w3m-cookie.el (w3m-cookie-store): Don't replace if ignored cookie.
	(w3m-cookie-retrieve): Don't use cookie which is ignored.
	(w3m-about-cookie): New function.

	* w3m-e21.el (w3m-setup-favicon): Do nothing when w3m-current-url
	is nil.

	* w3m.el (w3m-goto-url): Force reload if w3m-current-redirect is set.
	(w3m): If w3m-current-url is nil, erase buffer.

	* w3m-util.el (w3m-time-less-p): Abolish.
	(w3m-assoc-ignore-case): Moved from w3m-cookie.el and rewrote not to
	use assoc* (because it's cl function).

	* w3m-cookie.el (w3m-cookie-retrieve): Use w3m-time-newer-p instead of
	w3m-time-less-p.
	(w3m-cookie-1-set): Ditto.
	(w3m-assoc-ignore-case): Moved to w3m-util.el.

2002-03-25  Yuuichi Teranishi  <teranisi@gohome.org>

	* w3m-cookie.el (w3m-cookie-1-set): Use w3m-time-less-p instead of
	w3m-time-lapse-seconds.
	(w3m-cookie-retrieve): Ditto.

	* w3m-util.el (w3m-time-less-p): New inline function.

	* w3m.el (w3m-current-redirect): New buffer local variable.
	(w3m-clear-local-variables): Add w3m-current-redirect.
	(w3m-copy-local-variables): Treat w3m-current-redirect.
	(w3m-w3m-attributes): Set w3m-current-redirect instead of
	w3m-current-refresh when 30x response.
	(w3m-prepare-content): Use w3m-current-redirect instead of
	w3m-current-refresh.
	(w3m-goto-url): Do nothing but w3m-goto-url after retrieval if
	w3m-current-redirect is set.

2002-03-25  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* w3m-cookie.el (w3m-cookie-file): Changed default value.
	(w3m-cookie-save): Follow the above change.
	(w3m-cookie-load): Ditto.
