@@ -1,3 +1,9 @@
+2002-03-26  Yuuichi Teranishi  <teranisi@gohome.org>
+
+	* w3m.el (w3m-fontify-anchors): Changed anchor name property position.
+	(w3m-lynx-like-map): Bind w3m-cookie as `M-k'.
+	(w3m-info-like-map): Ditto.
+
 2002-03-26  Hideyuki SHIRAI  <shirai@meadowy.org>
 
 	* w3m-cookie.el (w3m-cookie-save): Use `w3m-time-newer-p' instead of
